AA-0: standardize yaml formatting

--- a/.applatix/axapproval.yaml
+++ b/.applatix/axapproval.yaml
@@ -2,20 +2,21 @@
 type: service_template
 subtype: container
 name: axapproval
-description: Base step for axapproval container
-container:
-  resources:
-    mem_mib: 128
-    cpu_cores: 0.01
-  image: get.applatix.io/axapproval:v1
-  command: sh -c 'axapproval --required_list "%%required_approvals%%"
-    --optional_list "%%optional_approvals%%"
-    --number_optional "%%number_of_optional_approvals_needed%%"
-    --timeout "%%timeout_in_minutes%%"'
+description: Get approvals
+
 inputs:
   parameters:
     required_approvals:
     optional_approvals:
     number_of_optional_approvals_needed:
     timeout_in_minutes:
-outputs:
+
+container:
+  image: get.applatix.io/axapproval:v1
+  resources:
+    mem_mib: 128
+    cpu_cores: 0.01
+  command: sh -c 'axapproval --required_list "%%required_approvals%%"
+    --optional_list "%%optional_approvals%%"
+    --number_optional "%%number_of_optional_approvals_needed%%"
+    --timeout "%%timeout_in_minutes%%"'
