--- a/.applatix/axscm_checkout.yaml
+++ b/.applatix/axscm_checkout.yaml
@@ -2,22 +2,23 @@
 type: service_template
 subtype: container
 name: axscm-checkout
-description: Checks out a source repository to /src
-container:
-  resources:
-    mem_mib: 256
-    cpu_cores: 0.1
-    disk_gb: 10
-  image: get.applatix.io/applatix/axscm:v1
-  docker_options: ''
-  command: "axscm clone %%repo%% /src --commit %%commit%%"
+description: Checks out commit to /src and export it as an artifact
+
 inputs:
   parameters:
     commit:
       default: "%%session.commit%%"
     repo:
       default: "%%session.repo%%"
+
 outputs:
   artifacts:
     code:
-      path: "/src"
+      path: /src
+
+container:
+  image: get.applatix.io/applatix/axscm:v1
+  resources:
+    mem_mib: 256
+    cpu_cores: 0.1
+  command: axscm clone %%repo%% /src --commit %%commit%%
