--- a/.applatix/example-build.yaml
+++ b/.applatix/example-build.yaml
@@ -2,22 +2,23 @@
 type: service_template
 subtype: container
 name: example-build
-description: build example
-container:
-  resources:
-    mem_mib: 256
-    cpu_cores: 0.1
-    disk_gb: 0
-  image: "golang:1.6"
-  docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && go build main.go && sleep 5'"
+description: Build the code
+
 inputs:
   artifacts:
   - from: "%%code%%"
-    path: "/src"
+    path: /src
   parameters:
     code:
+
 outputs:
   artifacts:
     binary:
-      path: "/src/main"
+      path: /src/main
+
+container:
+  image: golang:1.6
+  resources:
+    mem_mib: 256
+    cpu_cores: 0.1
+  command: sh -c 'cd /src && ls -ltr && go build main.go'
