--- a/.applatix/example-test.yaml
+++ b/.applatix/example-test.yaml
@@ -2,21 +2,21 @@
 type: service_template
 subtype: container
 name: example-test
-description: test example
+description: Run test
+
+inputs:
+  artifacts:
+  - from: "%%code%%"
+    path: /src
+  - from: "%%binary%%"
+    path: /src/main
+  parameters:
+    code:
+    binary:
+
 container:
   resources:
     mem_mib: 256
     cpu_cores: 0.1
-    disk_gb: 0
-  image: "golang:1.6"
-  docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && go test -v'"
-inputs:
-  artifacts:
-  - from: "%%code%%"
-    path: "/src"
-  - from: "%%binary%%"
-    path: "/src/main"
-  parameters:
-    code:
-    binary:
+  image: golang:1.6
+  command: sh -c 'cd /src && ls -ltr && go test -v'
