--- a/.applatix/example-policy.yaml
+++ b/.applatix/example-policy.yaml
@@ -91,3 +91,39 @@ when:
       - ".*"
     schedule: "*/15 * * * *"
     timezone: "US/Pacific"
+---
+type: policy
+name: example-workflow-policy-onpush
+description: Trigger example-workflow on pushes
+
+template: example-workflow-approval
+notifications:
+  -
+    when:
+      - on_start
+      - on_success
+      - on_failure
+      - on_change
+    whom:
+      - committer
+      - author
+      - hong@applatix.com
+  -
+    when:
+      - on_change
+    whom:
+      - abc@company.slack.com
+when:
+  -
+    event: on_push
+    target_branches:
+      - "master"
+      - "dev.+"
+  -
+    event: on_pull_request
+    target_branches:
+      - ".*"
+  -
+    event: on_pull_request_merge
+    target_branches:
+      - ".*"
