AA-0: added example-approval-project

--- a/.applatix/example-approval-project.yaml
+++ b/.applatix/example-approval-project.yaml
@@ -1,6 +1,6 @@
 ---
 type: project
-name: example-approval
+name: example-approval-project
 description: Run an example workflow with approval step
 actions:
   -
@@ -13,4 +13,3 @@ publish:
 labels:
     tags: "[\"test\"]"
 assets:
-   
