--- a/.applatix/example-approval-project.yaml
+++ b/.applatix/example-approval-project.yaml
@@ -13,4 +13,6 @@ publish:
 labels:
     tags: "[\"test\"]"
 assets:
-    icon: "https://raw.githubusercontent.com/Applatix/example-approval/master/.applatix/approval.png"
+    icon:     "https://raw.githubusercontent.com/Applatix/example-approval/master/approval.png"
+    overview: "https://raw.githubusercontent.com/Applatix/example-approval/master/README.md"
+    detail:   "https://raw.githubusercontent.com/Applatix/example-approval/master/OVERVIEW.md"
