AA-0: made non-promoted

--- a/.applatix/example-approval-project.yaml
+++ b/.applatix/example-approval-project.yaml
@@ -6,7 +6,7 @@ actions:
   -
     name: run
     template: example-workflow-approval
-categories: ["test", "promoted"]
+categories: ["test"]
 publish:
   branches:
     - master
