AA-0: added build and test actions

--- a/.applatix/example-approval-project.yaml
+++ b/.applatix/example-approval-project.yaml
@@ -6,6 +6,13 @@ actions:
   -
     name: run
     template: example-workflow-approval
+  -
+    name: build
+    template: example-workflow-build
+  -
+    name: test
+    template: example-workflow-test
+
 categories: ["test"]
 publish:
   branches:
