AA-0: fix the master policy format

--- a/.applatix/example-policy.yaml
+++ b/.applatix/example-policy.yaml
@@ -2,17 +2,12 @@
 type: policy
 name: example-workflow-policy
 description: Trigger example-workflow on pushes, pull requests and as a cron job
-
 template: example-workflow-approval
 parameters:
-  required_approvals:
-    default: hong@applatix.com
-  optional_approvals:
-    default: pratik@applatix.com
-  number_of_optional_approvals_needed:
-    default: 0
-  timeout_in_minutes:
-    default: 30
+  required_approvals: "hong@applatix.com"
+  optional_approvals: "pratik@applatix.com"
+  number_of_optional_approvals_needed: "0"
+  timeout_in_minutes: "30"
 notifications:
   -
     when:
@@ -57,17 +52,12 @@ labels:
 type: policy
 name: example-workflow-policy-1mins
 description: Trigger example-workflow every 1 minutes
-
 template: example-workflow-approval
 parameters:
-  required_approvals:
-    default: hong@applatix.com
-  optional_approvals:
-    default: pratik@applatix.com
-  number_of_optional_approvals_needed:
-    default: 0
-  timeout_in_minutes:
-    default: 30
+  required_approvals: "hong@applatix.com"
+  optional_approvals: "pratik@applatix.com"
+  number_of_optional_approvals_needed: "0"
+  timeout_in_minutes: "30"
 notifications:
   -
     when:
@@ -89,17 +79,12 @@ when:
 type: policy
 name: example-workflow-policy-15mins
 description: Trigger example-workflow every 15 minute
-
 template: example-workflow-approval
 parameters:
-  required_approvals:
-    default: hong@applatix.com
-  optional_approvals:
-    default: pratik@applatix.com
-  number_of_optional_approvals_needed:
-    default: 0
-  timeout_in_minutes:
-    default: 30
+  required_approvals: "hong@applatix.com"
+  optional_approvals: "pratik@applatix.com"
+  number_of_optional_approvals_needed: "0"
+  timeout_in_minutes: "30"
 notifications:
   -
     when:
@@ -120,17 +105,12 @@ when:
 type: policy
 name: example-workflow-policy-onpush
 description: Trigger example-workflow on pushes
-
 template: example-workflow-approval
 parameters:
-  required_approvals:
-    default: hong@applatix.com
-  optional_approvals:
-    default: pratik@applatix.com
-  number_of_optional_approvals_needed:
-    default: 0
-  timeout_in_minutes:
-    default: 30
+  required_approvals: "hong@applatix.com"
+  optional_approvals: "pratik@applatix.com"
+  number_of_optional_approvals_needed: "0"
+  timeout_in_minutes: "30"
 notifications:
   -
     when:
