--- a/.applatix/example-approval-project.yaml
+++ b/.applatix/example-approval-project.yaml
@@ -1,6 +1,6 @@
 ---
 type: project
-name: Example Approval3
+name: example qpproval
 description: Run an example workflow with approval step.
 actions:
   -
@@ -21,5 +21,4 @@ labels:
     tags: "[\"test\"]"
 assets:
     icon:     "https://raw.githubusercontent.com/Applatix/example-approval/master/approval.png"
-    overview: "https://raw.githubusercontent.com/Applatix/example-approval/master/OVERVIEW.md"
     detail:   "https://raw.githubusercontent.com/Applatix/example-approval/master/README.md"
