AA-0: change timeout to 10 min

--- a/.applatix/example-approval-project.yaml
+++ b/.applatix/example-approval-project.yaml
@@ -8,10 +8,10 @@ actions:
     template: example-workflow-approval
   -
     name: build
-    template: example-workflow-approval
+    template: example-build
   -
     name: test
-    template: example-workflow-approval
+    template: example-test
 
 categories: ["test", "promoted"]
 publish:
