--- a/.applatix/example-policy.yaml
+++ b/.applatix/example-policy.yaml
@@ -4,10 +4,10 @@ name: example-workflow-policy
 description: Trigger example-workflow on pushes, pull requests and as a cron job
 template: example-workflow-approval
 parameters:
-  required_approvals: "hong@applatix.com"
-  optional_approvals: "pratik@applatix.com"
-  number_of_optional_approvals_needed: "0"
-  timeout_in_minutes: "30"
+  required_approvals: hong@applatix.com
+  optional_approvals: pratik@applatix.com
+  number_of_optional_approvals_needed: 0
+  timeout_in_minutes: 10
 notifications:
   -
     when:
@@ -74,10 +74,10 @@ name: example-workflow-policy-15mins
 description: Trigger example-workflow every 15 minute
 template: example-workflow-approval
 parameters:
-  required_approvals: "hong@applatix.com"
-  optional_approvals: "pratik@applatix.com"
-  number_of_optional_approvals_needed: "0"
-  timeout_in_minutes: "30"
+  required_approvals: hong@applatix.com
+  optional_approvals: pratik@applatix.com
+  number_of_optional_approvals_needed: 0
+  timeout_in_minutes: 10
 notifications:
   -
     when:
@@ -100,10 +100,10 @@ name: example-workflow-policy-onpush
 description: Trigger example-workflow on pushes
 template: example-workflow-approval
 parameters:
-  required_approvals: "hong@applatix.com"
-  optional_approvals: "pratik@applatix.com"
-  number_of_optional_approvals_needed: "0"
-  timeout_in_minutes: "30"
+  required_approvals: hong@applatix.com
+  optional_approvals: pratik@applatix.com
+  number_of_optional_approvals_needed: 0
+  timeout_in_minutes: 10
 notifications:
   -
     when:
