Changing the name of the workflow

--- a/.applatix/example-approval-project.yaml
+++ b/.applatix/example-approval-project.yaml
@@ -1,6 +1,6 @@
 ---
 type: project
-name: Example Approval
+name: Approval Workflow
 description: Run an example workflow with approval step.
 actions:
   -
