--- a/.applatix/example-approval-project.yaml
+++ b/.applatix/example-approval-project.yaml
@@ -1,7 +1,7 @@
 ---
 type: project
-name: Sample CI Workflow 
-description: Run an sample CI workflow with approval step.
+name: CI Workflow 
+description: Run a CI workflow with approval step.
 actions:
   -
     name: run
